# ta3lem-lms

./: .dockerignore  .env.example  .env.staging  .gitignore  BUG_FIX_SUMMARY.md  BUG_SUBSCRIPTION_ENROLLMENT_FIX.md  BUG_SUBSCRIPTION_ONLY_COURSE.md  COURSE_ACCESS_IMPLEMENTATION.md  COURSE_DETAIL_UPDATE_NOTES.md  DUAL_PRICING_IMPLEMENTATION_SUMMARY.md  DUAL_PRICING_STRATEGY.md  Dockerfile  ENROLLMENT_MANAGEMENT_REMOVAL.md  FEATURE_ANALYSIS.md  GLOBAL_SETTINGS_GUIDE.md  INSTRUCTOR_FORM_FIX.md  INTEGRATION_COMPLETE.md  LANDING_SUBSCRIPTION_INTEGRATION.md  MANUAL_TESTING_CHECKLIST_INSTRUCTOR.md  MIGRATION_STUDENTS_TO_USERS.md  MODULE_DETAIL_REMOVED.md  MULTISITE_STRATEGY.md  Procfile  README.md  SETTINGS_README.md  SIDE_EFFECTS_ANALYSIS.md  SUBSCRIPTION_EXAMPLES.md  SUBSCRIPTION_IMPLEMENTATION.md  SUBSCRIPTION_QUICKSTART.md  SUMMARY.md  TEMPLATE_UPDATE_NOTES_INSTRUCTOR.md  TEMPLATE_UPDATE_NOTES_STUDENT.md  TESTING_GUIDE_STUDENT_MANAGEMENT.md  VERIFICATION_REPORT_OLD.md  db.sqlite3  docker-compose.yaml  load_all_fixtures.sh  localhost+2-key.pem  localhost+2.pem  manage.py  (+6 more)
core/: admin.py  apps.py  context_processors.py  models.py  utils.py
courses/: COMPLETE_CHECKLIST.md  README_TRACKING.md  TEMPLATES_DOCUMENTATION.md  TEMPLATE_FILTER_FIX.md  TRACKING_IMPLEMENTATION.md  TRACKING_QUICK_REFERENCE.md  TRACKING_SUMMARY.md  access_service.py  admin.py  apps.py  decorators.py  fields.py  forms.py  models.py  receivers.py  test_tracking.py  tests.py  urls.py  utils.py  views.py
docs/: MIXIN_INJECTION_EXPLAINED.md  PLUGIN_DEVELOPMENT.md
payments/: admin.py  apps.py  earnings_service.py  emails.py  services.py  signals.py  tests.py  urls.py  views.py
plugins/: __init__.py  admin.py  apps.py  base.py  context_processors.py  decorators.py  discovery.py  hooks.py  models.py  registry.py  tests.py
students/: forms.py  urls.py  views.py
subscriptions/: admin.py  apps.py  context_processors.py  decorators.py  models.py  receivers.py  services.py  tests.py  urls.py  views.py
ta3lem/: api_urls.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
users/: admin.py  constants.py  forms.py  models.py  signals.py  (+2 more)
(+200 files in other folders)
